Fix bbcode image overflow

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -264,6 +264,11 @@ footer ul {
     cursor: pointer;
 }
 
+.bb-image-container {
+  padding:1em;
+  overflow:hidden;
+}
+
 li.VuePagination__pagination-item:not(.VuePagination__pagination-item-prev-page):not(.VuePagination__pagination-item-prev-chunk):not(.VuePagination__pagination-item-next-page):not(.VuePagination__pagination-item-next-chunk) {
   @media (max-width: 992px) {
      display: none;
